# drifting-models

./: .gitignore  README.md  drifting-models-paper-notes.md  eval.py  generate.py  pyproject.toml  train.py
configs/: debug.yaml  debug_scaled.yaml  default.yaml  production.yaml  smoke_test.yaml
src/data/: dataset.py  queue.py
src/drifting/: field.py  loss.py  normalization.py  queue.py  smooth_proj.py  spectral.py
src/drifting_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/eval/: __init__.py  metrics.py
src/features/: encoder.py  pooling.py
src/inference/: decode.py
src/model/: generator.py  rope.py  style_embeddings.py
tests/: test_features.py  test_field.py  test_generator.py
